# rules_rust_repro

./: WORKSPACE.bazel
test/rustfmt/: BUILD.bazel  rustfmt_failure_test.sh  rustfmt_integration_test_suite.bzl
test/rustfmt/srcs/2018/: unformatted.rs
