load("@bazel_skylib//rules:write_file.bzl", "write_file")
load(":rustfmt_integration_test_suite.bzl", "rustfmt_integration_test_suite")
load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_library",
    "rust_shared_library",
    "rust_static_library",
    "rustfmt_test",
)

exports_files([
    "test_rustfmt.toml",
])

write_file(
    name = "srcs/generated/generated",
    out = "srcs/generated/generated.rs",
    content = """\
pub fn greeting() {
    println!("Guten tag!");
}
""".splitlines(),
    newline = "unix",
)

rustfmt_integration_test_suite(
    name = "rustfmt_integration_test_suite",
)

rust_static_library(
    name = "foo",
    srcs = [
        "srcs/generated/lib.rs",
        "srcs/generated/generated.rs",
    ],
    crate_root = "srcs/generated/lib.rs",
    edition = "2021",
)
